# fas-judgement-oss

./: .gitignore  LICENSE  README.md  patterns.json  pyproject.toml  requirements.txt  server.py
fas_judgement/: __init__.py  __main__.py  config.py
fas_judgement/core/: __init__.py  enums.py  errors.py  interfaces.py  models.py  registry.py  report.py  repository.py
fas_judgement/core/progression/: __init__.py  levels.py  models.py  service.py  storage.py
fas_judgement/core/progression/challenges/: __init__.py  level_01.py  level_02.py  level_03.py  level_04.py  level_05.py  level_06.py  level_07.py  level_08.py  level_09.py  level_10.py
fas_judgement/http/: __init__.py  app.py  deps.py  router_core.py  router_demo.py  router_patterns.py  router_progression.py  router_scan.py  schemas.py
fas_judgement/modules/: __init__.py
fas_judgement/modules/ai_security/: __init__.py  module.py
fas_judgement/modules/ai_security/demo/: __init__.py  challenge_target.py  personas.py  service.py  target.py
fas_judgement/modules/ai_security/multi_turn/: __init__.py  models.py  report.py  routes.py  scorer.py  service.py  storage.py
fas_judgement/modules/ai_security/patterns/: __init__.py  repository.py  service.py
fas_judgement/modules/ai_security/scanner/: __init__.py  runner.py  scorer.py  service.py
fas_judgement/transport/: __init__.py  base.py  discord.py  factory.py  http.py  ollama.py  slack.py  telegram.py  website.py
fas_judgement/ui/static/: index.html
fas_judgement/utils/: __init__.py  email.py  license.py  ollama.py  security.py
judgement/: __init__.py  license_client.py  report_generator.py  server.py
judgement/static/: index.html
static/: index.html
