[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fas-judgement"
version = "1.0.0"
description = "Open-source prompt injection attack console - Test AI systems for prompt injection vulnerabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Fallen Angel Systems", email = "contact@fallenangelsystems.com"}
]
keywords = ["security", "prompt-injection", "ai-security", "penetration-testing", "llm", "red-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0",
    "sse-starlette>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/fallen-angel-systems/fas-judgement-oss"
Documentation = "https://github.com/fallen-angel-systems/fas-judgement-oss#readme"
Repository = "https://github.com/fallen-angel-systems/fas-judgement-oss"
"Bug Tracker" = "https://github.com/fallen-angel-systems/fas-judgement-oss/issues"
"Hosted Version" = "https://judgement.fallenangelsystems.com"

[project.scripts]
judgement = "judgement.server:main"

[tool.setuptools.packages.find]
include = ["judgement*"]

[tool.setuptools.package-data]
judgement = ["static/*", "patterns.json"]
